--- a/index.ipynb
+++ b/index.ipynb
@@ -356,33 +356,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed']==Fals, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['is_closed']==False, restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Cocina Azul',\n",
+       "[{'name': 'Fork & Fig',\n",
        "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 647},\n",
-       " {'name': 'Stripes Biscuit',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 610},\n",
+       " {'name': 'Salt And Board',\n",
        "  'price': '$$',\n",
-       "  'is_closed': True,\n",
-       "  'review_count': 20}]"
+       "  'is_closed': False,\n",
+       "  'review_count': 11},\n",
+       " {'name': 'Frontier Restaurant',\n",
+       "  'price': '$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 1373},\n",
+       " {'name': 'Nexus Brewery',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 680},\n",
+       " {'name': \"Devon's Pop Smoke\",\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 54},\n",
+       " {'name': 'Philly Steaks',\n",
+       "  'price': '$$',\n",
+       "  'is_closed': False,\n",
+       "  'review_count': 25}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
