--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda price: price == 1, restaurants))"
+    "    return list(filter(lambda price: price[ == 1, restaurants))"
    ]
   },
   {
