--- a/index.ipynb
+++ b/index.ipynb
@@ -435,12 +435,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda rest: rest['price'] >= 1, restaurants))"
+    "    return list(filter(lambda rest: rest['price'] <= 1, restaurants))"
    ]
   },
   {
