--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,8 @@
     "      #  if type(restaurant['price']) == str:\n",
     "      #      restaurant['price'] = len(restaurant['price'])\n",
     "   # return restaurants\n",
-    "    return list(map(format_restaurant, restaurants))"
+    "    return list(map(format_restaurant, restaurants))\n",
+    "restraunts = format"
    ]
   },
   {
