automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
     "      #      restaurant['price'] = len(restaurant['price'])\n",
     "   # return restaurants\n",
     "    return list(map(format_restaurant, restaurants))\n",
-    "restraunts = format"
+    "restraunts = format_restaurants(r"
    ]
   },
   {
