automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,9 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'restauraunts' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-b4d4fadb9a3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0;31m# return restaurants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformat_restaurant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mrestraunts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformat_restaurants\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestauraunts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'restauraunts' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def format_restaurants(restaurants):\n",
     "    #for restaurant in restaurants:\n",
@@ -268,7 +280,7 @@
     "      #      restaurant['price'] = len(restaurant['price'])\n",
     "   # return restaurants\n",
     "    return list(map(format_restaurant, restaurants))\n",
-    "restraunts = format_restaurants(r"
+    "restraunts = format_restaurants(restaurants)"
    ]
   },
   {
