automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -258,21 +258,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'restauraunts' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-b4d4fadb9a3d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0;31m# return restaurants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformat_restaurant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrestaurants\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mrestraunts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mformat_restaurants\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrestauraunts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'restauraunts' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
     "    #for restaurant in restaurants:\n",
@@ -285,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -318,7 +306,7 @@
        "  'review_count': 20}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,39 +367,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fork & Fig',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 610},\n",
+       "[{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610},\n",
        " {'name': 'Salt And Board',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 11},\n",
        " {'name': 'Frontier Restaurant',\n",
-       "  'price': '$',\n",
+       "  'price': 1,\n",
        "  'is_closed': False,\n",
        "  'review_count': 1373},\n",
        " {'name': 'Nexus Brewery',\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 680},\n",
        " {'name': \"Devon's Pop Smoke\",\n",
-       "  'price': '$$',\n",
+       "  'price': 2,\n",
        "  'is_closed': False,\n",
        "  'review_count': 54},\n",
-       " {'name': 'Philly Steaks',\n",
-       "  'price': '$$',\n",
-       "  'is_closed': False,\n",
-       "  'review_count': 25}]"
+       " {'name': 'Philly Steaks', 'price': 2, 'is_closed': False, 'review_count': 25}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
