--- a/index.ipynb
+++ b/index.ipynb
@@ -477,12 +477,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['review_count'] >= 100, restauraunts))"
+    "    return list(filter(lambda restaurant: restaurant['review_count'] >= 100, restaurants))"
    ]
   },
   {
